# Echo-Strike

./: .gitignore  CMakeLists.txt  config.json
include/echo_strike/: CMakeLists.txt
include/echo_strike/collision/: collision_box.cpp  collision_box.hpp  collision_layer.hpp  collision_manager.cpp  collision_manager.hpp
include/echo_strike/config/: config_manager.cpp  config_manager.hpp  resource_manager.cpp  resource_manager.hpp
include/echo_strike/core/: timer.cpp  timer.hpp
include/echo_strike/device/: blend_mode.hpp  camera2d.cpp  camera2d.hpp  device_manager.hpp  flip_mode.hpp  input_event.hpp  input_manager.cpp  input_manager.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
include/echo_strike/entity/: entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  entity_state.cpp  entity_state.hpp  status.cpp  status.hpp
include/echo_strike/entity/entities/: player.hpp
include/echo_strike/event/: event.hpp  event_bus.hpp  events.hpp
include/echo_strike/image/: altas.hpp  animation.cpp  animation.hpp  atlas.cpp  atlas.hpp  image.cpp  image.hpp
include/echo_strike/physics/: movement_controller.hpp  object.hpp  obstacle_object.hpp  particle.hpp  physical_object.cpp  physical_object.hpp  physics_manager.cpp  physics_manager.hpp
include/echo_strike/state_machine/: state_machine.hpp  state_node.hpp  transition.hpp
include/echo_strike/transform/: point.hpp  ray.cpp  ray.hpp  rect.cpp  rect.hpp  transform2d.hpp  vec2.cpp
include/echo_strike/utils/: class_marcos.hpp  color.hpp  quadtree.hpp  ray.cpp  ray.hpp  rect.cpp  rect.hpp  vec2.cpp  vec2.hpp
tests/: test_animation.cpp  test_atlas.cpp  test_camera.cpp  test_collide_rect.cpp  test_collision.cpp  test_device_manager.cpp  test_entity.cpp  test_event.cpp  test_exe.cpp  test_input.cpp  test_object.cpp  test_particle.cpp  test_physics.cpp  test_quadtree.cpp  test_quadtree_optimization.cpp  test_quadtree_update.cpp  test_ray.cpp  test_rect.cpp  test_renderer.cpp  test_resource_manager.cpp  test_sdl.cpp  test_state_machine.cpp  test_timer.cpp  test_transition.cpp  test_vec2.cpp  test_window.cpp
